--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-numpy==1.18.4             # via -r requirements.in
+numpy==1.19.1             # via -r requirements.in, pandas
+pandas==1.1.1             # via -r requirements.in
+python-dateutil==2.8.1    # via pandas
+pytz==2020.1              # via pandas
+six==1.15.0               # via python-dateutil
