--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = numpy,pandas,plotly,pyspark,sklearn,statsmodels
+known_third_party = numpy,pandas,plotly,pyspark,scipy,sklearn,statsmodels
